# proyecto-2-snies-extractor-didi-sparty

./: .gitignore  CMakeLists.txt  sonar-project.properties
.github/workflows/: cmake-single-platform.yml  sonarcloud.yml
Documentacion/: MODELOS.md  MODELOS.mmd  youtubeLink.txt
Evaluaciones/: Autoevaluación del Proyecto SNIES.docx
src/: Consolidado.h  CsvReader.cpp  CsvReader.h  FileManager.cpp  FileManager.h  GestorCsv.cpp  GestorCsv.h  JsonController.cpp  JsonController.h  JsonWriter.cpp  JsonWriter.h  ProgramaAcademico.cpp  ProgramaAcademico.h  SNIESController.cpp  SNIESController.h  Settings.cpp  Settings.h  TxtWriter.cpp  TxtWriter.h  Utility.cpp  Utility.h  View.cpp  View.h  WriteManager.cpp  WriteManager.h  main.cpp
src/read-write/: CsvReader.cpp  CsvReader.h  CsvWriter.cpp  CsvWriter.h  JsonWriter.cpp  JsonWriter.h  TxtWriter.cpp  TxtWriter.h  WriteManager.cpp  WriteManager.h
